<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Catima</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <plurals name="selectedCardCount">
        <item quantity="one"><xliff:g>%d</xliff:g> selected</item>
        <item quantity="other"><xliff:g>%d</xliff:g> selected</item>
    </plurals>
    <string name="noGiftCards">Click the + plus button to add a card, or import from the ⋮ menu.</string>
...
